[gd_scene load_steps=25 format=3 uid="uid://d32go3mt62d31"]

[ext_resource type="Texture2D" uid="uid://b5tw0gu0i625b" path="res://assets/GreyboxTextures/GreyboxTextures/greybox_blue_grid.png" id="1_bcixf"]
[ext_resource type="Script" uid="uid://b7svhf7f5emr1" path="res://scenes/level/level.gd" id="1_scyvi"]
[ext_resource type="Script" uid="uid://dwchvephx0gb6" path="res://scenes/fly_mode_camera.gd" id="4_wx0nk"]
[ext_resource type="PackedScene" uid="uid://dqcgkdrx4yu5y" path="res://addons/input-overlay/overlay-widget/overlay-widget.tscn" id="5_45t5u"]
[ext_resource type="Script" uid="uid://cmtkhuebtueov" path="res://scenes/player/weapon/weapon_controller.gd" id="5_jwyb7"]
[ext_resource type="Script" uid="uid://cm6bvjjhychqi" path="res://scenes/level/player_fps.gd" id="5_scyvi"]
[ext_resource type="Resource" uid="uid://ccpyxjiymykcc" path="res://scenes/player/weapon/weapons/rifle.tres" id="6_c67ir"]
[ext_resource type="PackedScene" uid="uid://f4nixkta2x5q" path="res://scenes/player/weapon/weapons/shotgun.tscn" id="7_o1a5k"]
[ext_resource type="Script" uid="uid://cru8pmyng1url" path="res://scenes/level/crosshair.gd" id="7_wx0nk"]
[ext_resource type="PackedScene" uid="uid://cmpqbxl153lmv" path="res://scenes/player/weapon_view.tscn" id="9_ennbq"]
[ext_resource type="PackedScene" uid="uid://c1y8ubxu4xr77" path="res://scenes/enemies/turret.tscn" id="12_fhfkp"]
[ext_resource type="Texture2D" uid="uid://864drylhwgf6" path="res://assets/blood_overlay/Health_texture.png" id="12_qox0j"]
[ext_resource type="Script" uid="uid://uhfqrsvo30fv" path="res://scenes/level/blood_overlay.gd" id="13_c67ir"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_nbgty"]
sky_top_color = Color(1, 1, 1, 1)
sky_horizon_color = Color(0.4907779, 3.7397593e-05, 0.4046976, 1)
sky_curve = 0.13518769
ground_bottom_color = Color(0.11480638, 0.30095205, 0.21521029, 1)
ground_horizon_color = Color(0.40441567, 0.20576957, 0.42226323, 1)
ground_curve = 0.11313734

[sub_resource type="Sky" id="Sky_i166f"]
sky_material = SubResource("ProceduralSkyMaterial_nbgty")

[sub_resource type="Environment" id="Environment_qkmgm"]
background_mode = 2
sky = SubResource("Sky_i166f")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nbgty"]
albedo_texture = ExtResource("1_bcixf")
uv1_scale = Vector3(0.2, 0.2, 0.2)
uv1_triplanar = true

[sub_resource type="Animation" id="Animation_4dow1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.15790828, -0.28491816, -0.28577396)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.108647734, -0.044488117, -0.010146867)]
}

[sub_resource type="Animation" id="Animation_c67ir"]
resource_name = "toggle_doom_mode"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.15790828, -0.28491816, -0.28577396), Vector3(0, -0.2, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.108647734, -0.044488117, -0.010146867), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4dow1"]
_data = {
&"RESET": SubResource("Animation_4dow1"),
&"toggle_doom_mode": SubResource("Animation_c67ir")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_knrqb"]
radius = 0.2680664
height = 1.434082

[sub_resource type="Animation" id="Animation_jwyb7"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/PlayerCamera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/PlayerCamera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.02177769, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/PlayerCamera:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_ennbq"]
resource_name = "walk_camera_movement"
length = 0.5
loop_mode = 2
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraPivot/PlayerCamera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(2, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.2, 0, 0, -0.033698156, 0, 0, 0, 0, -0.028352138, 0, 0, 0),
"times": PackedFloat32Array(0, 0.26666668, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraPivot/PlayerCamera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(2, 0, 0),
"points": PackedFloat32Array(0.02177769, -0.25, 0, 0.16666667, 0.010679863, -0.1515689, -0.033698156, 0.028891101, 0, 0, 0, -0.028352138, 0.02198079, 0, 0),
"times": PackedFloat32Array(0, 0.26666668, 0.5000334)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraPivot/PlayerCamera:position:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(2, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.13333334, 0.010601501, -0.06990286, -0.033698156, 0.011650478, 0, 0, 0, -0.028352138, 0.007400204, 0, 0),
"times": PackedFloat32Array(0, 0.26666668, 0.5000334)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o1a5k"]
_data = {
&"RESET": SubResource("Animation_jwyb7"),
&"walk_camera_movement": SubResource("Animation_ennbq")
}

[node name="Level" type="Node3D" node_paths=PackedStringArray("player", "free_camera", "player_camera")]
script = ExtResource("1_scyvi")
player = NodePath("PlayerFPS")
free_camera = NodePath("FreeCamera")
player_camera = NodePath("PlayerFPS/CameraPivot/PlayerCamera")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qkmgm")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
material_overlay = SubResource("StandardMaterial3D_nbgty")
use_collision = true
collision_layer = 2147483648
collision_mask = 0

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2001152, -1.1072689, 1.5779896)
use_collision = true
size = Vector3(48.00241, 1, 50.18013)

[node name="FreeCamera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.9981919, 0.012690758, -0.058753468, -0.0023053847, 0.9848216, 0.1735543, 0.060064223, -0.17310505, 0.98307014, -8.310061, 10.097511, 8.294793)
visible = false
script = ExtResource("4_wx0nk")

[node name="PlayerFPS" type="CharacterBody3D" parent="."]
transform = Transform3D(0.999909, 0.0005169482, -0.013481079, -0.00080292136, 0.9997746, -0.021216158, 0.013467072, 0.021225054, 0.999684, 0, 0.392731, 0)
collision_mask = 2147483650
script = ExtResource("5_scyvi")

[node name="CameraPivot" type="Node3D" parent="PlayerFPS"]
unique_name_in_owner = true

[node name="PlayerCamera" type="Camera3D" parent="PlayerFPS/CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.9274321, -0.37399158, 0, 0.37399158, 0.9274321, 0, 0.02177769, 0)
current = true

[node name="WeaponPivot" type="Node3D" parent="PlayerFPS/CameraPivot/PlayerCamera"]
transform = Transform3D(0.99891055, 0.014958794, -0.04421124, -0.010086867, 0.9940492, 0.108434185, 0.045570325, -0.10786963, 0.99312073, 0.15790828, -0.28491816, -0.28577396)

[node name="WeaponController" type="Node3D" parent="PlayerFPS/CameraPivot/PlayerCamera/WeaponPivot"]
transform = Transform3D(0.99999994, -1.8626451e-09, 3.7252903e-09, -1.8626451e-09, 0.99999994, -2.9802322e-08, -3.7252903e-09, 0, 0.9999999, 0, 0, 0)
script = ExtResource("5_jwyb7")
weapon = ExtResource("6_c67ir")
weapon_mode = 0

[node name="WeaponPivotAnimationPlayer" type="AnimationPlayer" parent="PlayerFPS/CameraPivot/PlayerCamera/WeaponPivot"]
libraries = {
&"": SubResource("AnimationLibrary_4dow1")
}

[node name="BulletSpawnPoint" type="Marker3D" parent="PlayerFPS/CameraPivot/PlayerCamera/WeaponPivot"]
unique_name_in_owner = true
transform = Transform3D(0.9999997, -9.313226e-10, 3.7252903e-09, 0, 1.0000001, 0, 3.7252903e-09, 0, 0.9999998, 0.0339095, 0.08439542, -0.25499165)

[node name="WeaponModel" parent="PlayerFPS/CameraPivot/PlayerCamera/WeaponPivot" instance=ExtResource("7_o1a5k")]
transform = Transform3D(0.99999994, 9.313227e-10, -3.2311743e-27, -9.313226e-10, 1, 4.135903e-25, 3.2311747e-27, -4.1359036e-25, 0.99999994, 0, 0, 0)

[node name="HitScanRayCast" type="RayCast3D" parent="PlayerFPS/CameraPivot/PlayerCamera"]
unique_name_in_owner = true
target_position = Vector3(0, 0, -20)
collision_mask = 2147483650
collide_with_areas = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerFPS"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.28295898, 0)
shape = SubResource("CapsuleShape3D_knrqb")

[node name="CameraAnimationPlayer" type="AnimationPlayer" parent="PlayerFPS"]
libraries = {
&"": SubResource("AnimationLibrary_o1a5k")
}

[node name="Props" type="Node3D" parent="."]

[node name="CanvasDebug" type="CanvasLayer" parent="."]

[node name="OverlayWidget" parent="CanvasDebug" instance=ExtResource("5_45t5u")]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 732.0
offset_bottom = 120.0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Crosshair" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("7_wx0nk")
color = Color(1, 1, 1, 1)

[node name="Center" type="Control" parent="HUD/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Line2D" type="Line2D" parent="HUD/Crosshair/Center"]
points = PackedVector2Array(0, 5, 0, 15)
width = 3.0

[node name="Line2D2" type="Line2D" parent="HUD/Crosshair/Center"]
points = PackedVector2Array(0, -5, 0, -15)
width = 3.0

[node name="Line2D3" type="Line2D" parent="HUD/Crosshair/Center"]
points = PackedVector2Array(-5, 0, -15, 0)
width = 3.0

[node name="Line2D4" type="Line2D" parent="HUD/Crosshair/Center"]
points = PackedVector2Array(5, 0, 15, 0)
width = 3.0

[node name="SubViewportContainer" type="SubViewportContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="HUD/SubViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Node3D" parent="HUD/SubViewportContainer/SubViewport" instance=ExtResource("9_ennbq")]
visible = false

[node name="BloodOverlay" type="TextureRect" parent="HUD" node_paths=PackedStringArray("player")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("12_qox0j")
expand_mode = 5
stretch_mode = 5
script = ExtResource("13_c67ir")
player = NodePath("../../PlayerFPS")

[node name="Turret" parent="." instance=ExtResource("12_fhfkp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.87455326, -0.60726726, -4.362733)

[node name="Turret2" parent="." instance=ExtResource("12_fhfkp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.5582027, -0.60726726, -4.362733)

[node name="Turret3" parent="." instance=ExtResource("12_fhfkp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.403518, -0.60726726, -4.362733)
